# net-camera

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/site/kason/netcamera/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/site/kason/netcamera/: Frame.java  H264Encoder.java  MainActivity.java  PreviewBuffer.java
app/src/main/java/site/kason/netcamera/util/: CameraUtil.java  Performance.java  PermissionManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/site/kason/netcamera/: ExampleUnitTest.java
viewer-app/: .gitignore  CMakeLists.txt  README.md  h264-decoder.cpp  h264-decoder.h  net-camera-viewer.cpp  net-camera-viewer.h  packet-receiver.cpp  packet-receiver.h  performance.cpp  performance.h  yuv-render.cpp  yuv-render.h
